add function : 1. Hint label